<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="btnDigit0">0</string>
    <string name="btnDigit1">1</string>
    <string name="btnDigit2">2</string>
    <string name="btnDigit3">3</string>
    <string name="btnDigit4">4</string>
    <string name="btnDigit5">5</string>
    <string name="btnDigit6">6</string>
    <string name="btnDigit7">7</string>
    <string name="btnDigit8">8</string>
    <string name="btnDigit9">9</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnClean">CE</string>
    <string name="btnSolve">=</string>
    <string name="btnPoint">.</string>
</resources>
