<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="#000000"
    android:orientation="vertical"
    android:nestedScrollingEnabled="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/expression"
        android:textColor="@color/colorWhite"
        android:textSize="40sp" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnClean"
            android:text="@string/btnClean"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnSolve"
            android:text="@string/btnSolve"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnDigit7"
            android:text="@string/btnDigit7"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnDigit8"
            android:id="@+id/btnDigit8"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnDigit9"
            android:id="@+id/btnDigit9"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnMultiply"
            android:text="@string/btnMultiply"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit4"
            android:id="@+id/btnDigit4"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit5"
            android:id="@+id/btnDigit5"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit6"
            android:id="@+id/btnDigit6"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDivide"
            android:id="@+id/btnDivide"
            android:layout_weight="1"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnDigit1"
            android:text="@string/btnDigit1"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit2"
            android:id="@+id/btnDigit2"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit3"
            android:id="@+id/btnDigit3"
            android:layout_weight="1"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnPlus"
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnDigit0"
            android:id="@+id/btnDigit0"
            android:layout_weight="1.95"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnPoint"
            android:id="@+id/btnPoint"
            android:layout_weight="0.95"
            android:background="@color/colorDarkGrey"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
             />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnMinus"
            android:id="@+id/btnMinus"
            android:layout_weight="0.95"
            android:background="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"/>
            
    </TableRow>
</TableLayout>

